--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
               <span class="ml-1 font-weight-bolder align-middle">Brooklyn Wets</span>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="ml-1">Brooklyn Wets</span>
+            <span class="navbar-toggler-icon"></span>
           </button>
         
           <div class="collapse navbar-collapse " id="navbarSupportedContent">
@@ -47,9 +47,6 @@
                     <a href="https://www.instagram.com/brooklynwetswp/" class="nav-link text-github">
                     <i class="fab fa-instagram fa-lg"></i>
                     </a>
-                    </li> 
-                    <li class="nav-item d-none d-lg-inline-block">
-                    <a class="btn btn-primary ml-1" href="#" role="button">CONTACT</a>
                     </li>
               </ul>
               <a class="navbar-brand ml-2" href="#">
@@ -68,7 +65,7 @@
     <div class="container h-100">
       <div class="d-flex h-100 text-center align-items-center">
         <div class="w-100 text-white">
-          <h1 class="display-3 font-weight-bold">Waterpolo</h1>
+          <h1 class="min display-3 font-weight-bold">Waterpolo</h1>
           <p class="lead mb-0">in Brooklyn</p>
         </div>
       </div>
@@ -91,7 +88,7 @@
         <div class="col-lg-5">
           <div class="py-5 px-4 masthead-cards">
             <div class="d-flex">
-              <a href="" class="w-50 pr-3 pb-4">
+              <a href="" class="w-40 pr-3 pb-4">
                 <div class="card border-0 border-bottom-red shadow-lg shadow-hover">
                   <div class="card-body text-center">
                     <div class="text-center">
@@ -101,7 +98,7 @@
                   </div>
                 </div>
               </a>
-              <a href="" class="w-50 pl-3 pb-4">
+              <a href="" class="w-40 pl-3 pb-4">
                 <div class="card border-0 border-bottom-blue shadow-lg shadow-hover">
                   <div class="card-body text-center">
                     <div class="text-center">
@@ -113,7 +110,7 @@
               </a>
             </div>
             <div class="d-flex">
-              <a href="" class="w-50 pr-3">
+              <a href="" class="w-40 pr-3">
                 <div class="card border-0 border-bottom-yellow shadow-lg shadow-hover">
                   <div class="card-body text-center">
                     <div class="text-center">
@@ -136,7 +133,7 @@
   <section class="text-center jumbotron-home">
     <div class="container">
       <h1 class="display-3 font-weight-bold text-pad">¡Enjoy with us!</h1>
-      <p class="lead text-muted text-pad">we invite you to meet our water polo group and discover how we have fun.</p>
+      <p class="lead text-muted text-pad">We invite you to meet our water polo group and discover how we have fun.</p>
     </div>
     <div class="container">
         <div class="row">
@@ -196,9 +193,6 @@
                 <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
               <p>
                 <i class="fas fa-envelope mr-3"></i>info@brooklynwets.com</p>
-              <p>
-                <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-              <p>
           </div>
           <!-- Grid column -->
 
