--- a/public/About.html
+++ b/public/About.html
@@ -14,7 +14,7 @@
     <!-- Nav-->
     <nav class="navbar fixed-top navbar navbar-expand-lg navbar-light bg-light sb-navbar">
       <div class="container">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
               <img src="images/logo_final.svg" width="50" height="50" class="d-inline-block align-middle" alt="">
               <span class="ml-1 font-weight-bolder align-middle">Brooklyn Wets</span>
           </a>
@@ -56,127 +56,60 @@
       </div>  
     </nav>
     <!-- Nav-->
-<!--Carousel Wrapper-->
-<header>
-    <div class="overlay"></div>
-    <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-      <source src="images/video_home.mp4" type="video/mp4">
-    </video>
-    <div class="container h-100">
-      <div class="d-flex h-100 text-center align-items-center">
-        <div class="w-100 text-white">
-          <h1 class="min display-3 font-weight-bold">Waterpolo in Brooklyn</h1>
-        </div>
-      </div>
-    </div>
-  </header>
-  <!--Carousel Wrapper-->
 
-
-  <!--main-->
-  <div class="masthead">
-    <div class="container">
-      <div class="row align-items-center">
+    <!-- Content-->
+        <div class="container">
+        <div class="row align-items-center">
         <div class="col-lg-7 py-5">
-          <h2 class="mb-4 text_about font-weight-bold">¡We Are the BK Wets!</h2>
-          <h2 class="mb-4 text_about">Our Philosophy...</h2>
-          <h3 class="m-0">The game is the greatest teacher of the game. Our coaches like talking but prefer watching you
-            have fun. If you want advice on your game, ask the coaches. Drills are simple and short. We want you to play
-            and have fun.</h3>
+        <h1 class="mb-4 text-uppercase font-weight-bold">the Brooklyn Wets</h1>
+        <h3 class="mb-4">We were founded in 2015 after an overwhelming response to our New York Water Polo Meetup.
+            We provide a place to scrimmage and a group to have a beer with after the scrimmage. Ages of members range from 18 to "None of your business." 
+            We're co-ed, and field teams for women's and co-ed games.
+        </h3>
+        <h3 class="mb-4">The game is the greatest teacher of the game. Our coaches like talking but refer watching you have fun.
+            If you want advice on your game, ask the coaches. Drills are simple and short. We want you to play and have fun.
+        </h3>
         </div>
         <div class="col-lg-5">
-          <div class="py-5 px-4 masthead-cards">
-            <div class="d-flex">
-              <a href="" class="w-40 pr-3 pb-4">
-                <div class="card border-0 border-bottom-red shadow-lg shadow-hover">
-                  <div class="card-body text-center">
-                    <div class="text-center">
-                      <i class="far fa-4x fa-smile-wink"></i>
-                    </div>
-                    Donations
-                  </div>
+                <div class="card bg-dark product-image">
+                        <img src="images/8.png" class="card-img" alt="...">
                 </div>
-              </a>
-              <a href="" class="w-40 pl-3 pb-4">
-                <div class="card border-0 border-bottom-blue shadow-lg shadow-hover">
-                  <div class="card-body text-center">
-                    <div class="text-center">
-                      <i class="fas fa-4x fa-swimmer"></i>
-                    </div>
-                    Team does!
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="d-flex">
-              <a href="" class="w-40 pr-3">
-                <div class="card border-0 border-bottom-yellow shadow-lg shadow-hover">
-                  <div class="card-body text-center">
-                    <div class="text-center">
-                      <i class="fas fa-4x fa-users"></i>
-                    </div>
-                    Who can practice?
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="shape"></div>
-          </div>
         </div>
-      </div>
-    </div>
-  </div>
-  <!--main-->
 
-  <!--main2-->
-  <section class="text-center jumbotron-home">
-    <div class="container">
-      <h2 class="display-3 font-weight-bold text-pad">¡Enjoy with us!</h2>
-      <p class="lead text-muted text-pad">We invite you to meet our water polo group and discover how we have fun.</p>
-    </div>
-    <div class="container">
-        <div class="row">
-          <a href="images/1.png" data-toggle="lightbox" data-gallery="gallery"
-            class="col-md-3 view overlay">
-            <img src="images/1.png" class="img-fluid rounded">
-          </a>
-          <a href="images/2.png" data-toggle="lightbox" data-gallery="gallery"
-            class="col-md-3">
-            <img src="images/2.png" class="img-fluid rounded">
-          </a>
-          <a href="images/3.png" data-toggle="lightbox" data-gallery="gallery"
-            class="col-md-3">
-            <img src="images/3.png" class="img-fluid rounded">
-          </a>
-          <a href="images/4.png" data-toggle="lightbox" data-gallery="gallery"
-            class="col-md-3">
-            <img src="images/4.png" class="img-fluid rounded">
-          </a>
         </div>
-        <div class="row">
-          <a href="images/5.png" data-toggle="lightbox" data-gallery="gallery"
-            class="col-md-3">
-            <img src="images/5.png" class="img-fluid rounded">
-          </a>
-          <a href="images/6.png" data-toggle="lightbox" data-gallery="gallery"
-            class="col-md-3">
-            <img src="images/6.png" class="img-fluid rounded">
-          </a>
-          <a href="images/7.png" data-toggle="lightbox" data-gallery="gallery"
-            class="col-md-3">
-            <img src="images/7.png" class="img-fluid rounded">
-          </a>
-          <a href="images/8.png" data-toggle="lightbox" data-gallery="gallery"
-            class="col-md-3">
-            <img src="images/8.png" class="img-fluid rounded">
-          </a>
         </div>
-      </div>
-  </section>
+    <div class="mailchimp mt-5">
+        <div class="container text-center">
+        <div class="row justify-content-center">
+        <div class="col-xl-7 col-lg-8">
+        <h3 class="mb-0">Want more Bootstrap themes &amp; templates?</h3>
+        <p class="text-white-50">Subscribe to get updated when new Bootstrap related products arrive!</p>
+        <div id="mc_embed_signup">
+        <form role="form" action="https://startbootstrap.us3.list-manage.com/subscribe/post?u=531af730d8629808bd96cf489&amp;id=afb284632f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate="novalidate">
+        <div class="input-group input-group-lg">
+        <input type="email" name="EMAIL" class="form-control border-0" id="mce-EMAIL" placeholder="Email address...">
+        <div class="input-group-append">
+        <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-light">Subscribe!</button>
+        </div>
+        </div>
+        <div id="mce-responses">
+        <div class="response" id="mce-error-response" style="display:none"></div>
+        <div class="response" id="mce-success-response" style="display:none"></div>
+        </div>
+        </form>
+        </div>
+        <div class="text-center mt-4">
+        <p class="text-white-50 mb-4">or get updates on Twitter</p>
+        <a href="javascript:void(0)" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://twitter.com/intent/user?original_referer=&amp;region=screen_name&amp;screen_name=SBootstrap&amp;source=followbutton&amp;variant=1.1', 'twitter', 'toolbar=no, width=450, height=600'); return false;" class="btn btn-twitter btn-xl shadow"><i class="fab fa-twitter mr-2"></i> Follow @SBootstrap</a>
+        </div>
+        </div>
+        </div>
+        </div>
+        </div>
+    <!-- Content-->
+    
 
-  <!--mani2-->
-
-  <!--footer-->
+ <!--footer-->
   <!-- Footer -->
   <footer class="page-footer font-small unique-color-dark">
 
@@ -226,6 +159,7 @@
     <!-- Copyright -->
   </footer>
   <!-- Footer end -->
+
   
 
   <!-- Optional JavaScript -->
