--- a/public/About.html
+++ b/public/About.html
@@ -1,115 +1,153 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <title>Brooklyn Wets</title> 
-  </head>
-  <body>
-    <!-- Nav-->
-    <nav class="navbar fixed-top navbar navbar-expand-lg navbar-light bg-light sb-navbar">
-      <div class="container">
-          <a class="navbar-brand" href="index.html">
-              <img src="images/logo_final.svg" width="50" height="50" class="d-inline-block align-middle" alt="">
-              <span class="ml-1 font-weight-bolder align-middle">Brooklyn Wets</span>
-          </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        
-          <div class="collapse navbar-collapse " id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="About.html">About<span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Events</a>
-              </li>
-              <li class="nav-item ">
-                  <a class="nav-link" href="#">Women<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Locations</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav pb-3 pb-lg-0">
-                    <li class="nav-item d-none d-lg-inline-block">
-                    <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/" class="nav-link text-meetup">
-                      <i class="fab fa-meetup fa-lg"></i>
-                    </a>
-                    </li>
-                    <li class="nav-item d-none d-lg-inline-block">
-                    <a href="https://www.instagram.com/brooklynwetswp/" class="nav-link text-github">
-                    <i class="fab fa-instagram fa-lg"></i>
-                    </a>
-                    </li>
-              </ul>
-              <a class="navbar-brand ml-2" href="#">
-                <img src="images/ball_final.svg" width="50" height="50" class="d-inline-block align-middle" alt="">
-              </a>
-          </div>
-      </div>  
-    </nav>
-    <!-- Nav-->
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Content-->
-        <div class="container">
-        <div class="row align-items-center">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <title>Brooklyn Wets</title>
+</head>
+
+<body>
+  <!-- Nav-->
+  <nav class="navbar fixed-top navbar navbar-expand-lg navbar-light bg-light sb-navbar">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+        <img src="images/logo_final.svg" width="50" height="50" class="d-inline-block align-middle" alt="">
+        <span class="ml-1 font-weight-bolder align-middle">Brooklyn Wets</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse " id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="About.html">About<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Events</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" href="#">Women<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Locations</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav pb-3 pb-lg-0">
+          <li class="nav-item d-none d-lg-inline-block">
+            <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/" class="nav-link text-meetup">
+              <i class="fab fa-meetup fa-lg"></i>
+            </a>
+          </li>
+          <li class="nav-item d-none d-lg-inline-block">
+            <a href="https://www.instagram.com/brooklynwetswp/" class="nav-link text-github">
+              <i class="fab fa-instagram fa-lg"></i>
+            </a>
+          </li>
+        </ul>
+        <a class="navbar-brand ml-2" href="#">
+          <img src="images/ball_final.svg" width="50" height="50" class="d-inline-block align-middle" alt="">
+        </a>
+      </div>
+    </div>
+  </nav>
+  <!-- Nav-->
+
+  <!-- Content-->
+  <div class="block2">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-5">
+          <figure class="effect-lily max">
+            <img src="images/8.png" alt="brooklynwets">
+          </figure>
+        </div>
         <div class="col-lg-7 py-5">
-        <h1 class="mb-4 text-uppercase font-weight-bold">the Brooklyn Wets</h1>
-        <h3 class="mb-4">We were founded in 2015 after an overwhelming response to our New York Water Polo Meetup.
-            We provide a place to scrimmage and a group to have a beer with after the scrimmage. Ages of members range from 18 to "None of your business." 
+          <h1 class="mb-4 text-uppercase font-weight-bold">the Brooklyn Wets</h1>
+          <h3 class="mb-4">We were founded in 2015 after an overwhelming response to our New York Water Polo Meetup.
+            We provide a place to scrimmage and a group to have a beer with after the scrimmage. Ages of members range
+            from 18 to "None of your business."
             We're co-ed, and field teams for women's and co-ed games.
-        </h3>
-        <h3 class="mb-4">The game is the greatest teacher of the game. Our coaches like talking but refer watching you have fun.
-            If you want advice on your game, ask the coaches. Drills are simple and short. We want you to play and have fun.
-        </h3>
+          </h3>
+          <h3 class="mb-4">The game is the greatest teacher of the game. Our coaches like talking but refer watching you
+            have fun.
+            If you want advice on your game, ask the coaches. Drills are simple and short. We want you to play and have
+            fun.
+          </h3>
+        </div>
+      </div>
+      <div class="row align-items-center">
+        <div class="col-lg-7 py-5">
+          <h2 class="mb-4 text-uppercase font-weight-bold">Our Philosophy</h2>
+          <h3 class="mb-4">The game is the greatest teacher of the game. Our coaches like talking but refer watching you
+            have fun.
+            If you want advice on your game, ask the coaches. Drills are simple and short. We want you to play and have
+            fun.
+          </h3>
         </div>
         <div class="col-lg-5">
-                <div class="card bg-dark product-image">
-                        <img src="images/8.png" class="card-img" alt="...">
-                </div>
+          <figure class="effect-lily max">
+            <img src="images/8.png" alt="brooklynwets">
+          </figure>
         </div>
+      </div>
+      <div class="row align-items-center">
+        <div class="col-lg-7 py-5">
+          <h2 class="mb-4 text-uppercase font-weight-bold">Be Part of Our Team</h2>
+          <h3 class="mb-4">We are straight, gay, white, brown, black, Romanian, Canadian, Australian, etc.
+            It's New York, so it's a diverse crew. It's a good time, and you should join us.
+          </h3>
+        </div>
+        <div class="col-lg-5">
+          <figure class="effect-lily max">
+            <img src="images/8.png" alt="brooklynwets">
+          </figure>
+        </div>
+      </div>
 
-        </div>
-        </div>
-    <div class="mailchimp mt-5">
-        <div class="container text-center">
-        <div class="row justify-content-center">
+    </div>
+  </div>
+  <div class="mailchimp">
+    <div class="container text-center">
+      <div class="row justify-content-center">
         <div class="col-xl-7 col-lg-8">
-        <h3 class="mb-0">Want more Bootstrap themes &amp; templates?</h3>
-        <p class="text-white-50">Subscribe to get updated when new Bootstrap related products arrive!</p>
-        <div id="mc_embed_signup">
-        <form role="form" action="https://startbootstrap.us3.list-manage.com/subscribe/post?u=531af730d8629808bd96cf489&amp;id=afb284632f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate="novalidate">
-        <div class="input-group input-group-lg">
-        <input type="email" name="EMAIL" class="form-control border-0" id="mce-EMAIL" placeholder="Email address...">
-        <div class="input-group-append">
-        <button type="submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-light">Subscribe!</button>
+          <h2 class="mb-0 uppercase font-weight-bold">Practice Times</h2>
+          <p class="text-white-50 mb-4">We practice Saturdays 2-3:30PM at Metropolitan Rec Center in Williamsburg. We
+            also have a more instructional beginner friendly practice at Mondays at 6pm at the Gertrude Ederle
+            Recreation Center. Subscribe for more information.</p>
+          <div id="mc_embed_signup">
+            <form role="form" action="" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+              target="_blank" novalidate="novalidate">
+              <div class="input-group input-group-lg">
+                <input type="email" name="EMAIL" class="form-control border-0" id="mce-EMAIL"
+                  placeholder="Email address...">
+                <div class="input-group-append">
+                  <button type="submit" name="subscribe" id="mc-embedded-subscribe"
+                    class="btn btn-light">Subscribe!</button>
+                </div>
+              </div>
+              <div id="mce-responses">
+                <div class="response" id="mce-error-response" style="display:none"></div>
+                <div class="response" id="mce-success-response" style="display:none"></div>
+              </div>
+            </form>
+          </div>
         </div>
-        </div>
-        <div id="mce-responses">
-        <div class="response" id="mce-error-response" style="display:none"></div>
-        <div class="response" id="mce-success-response" style="display:none"></div>
-        </div>
-        </form>
-        </div>
-        <div class="text-center mt-4">
-        <p class="text-white-50 mb-4">or get updates on Twitter</p>
-        <a href="javascript:void(0)" onclick="if (!window.__cfRLUnblockHandlers) return false; window.open('https://twitter.com/intent/user?original_referer=&amp;region=screen_name&amp;screen_name=SBootstrap&amp;source=followbutton&amp;variant=1.1', 'twitter', 'toolbar=no, width=450, height=600'); return false;" class="btn btn-twitter btn-xl shadow"><i class="fab fa-twitter mr-2"></i> Follow @SBootstrap</a>
-        </div>
-        </div>
-        </div>
-        </div>
-        </div>
-    <!-- Content-->
-    
+      </div>
+    </div>
+  </div>
+  <!-- Content-->
 
- <!--footer-->
+
+  <!--footer-->
   <!-- Footer -->
   <footer class="page-footer font-small unique-color-dark">
 
@@ -117,14 +155,14 @@
       <div class="container">
 
         <!-- Grid row-->
-        <div class="row py-4 d-flex align-items-center">
+        <div class="row py-4 d-flex align-items-center" style="margin-top: 0px;">
 
           <!-- Grid column -->
           <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0 text-white">
             <p>
-                <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-              <p>
-                <i class="fas fa-envelope mr-3"></i>info@brooklynwets.com</p>
+              <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+            <p>
+              <i class="fas fa-envelope mr-3"></i>info@brooklynwets.com</p>
           </div>
           <!-- Grid column -->
 
@@ -133,14 +171,14 @@
             <h6 class="mb-0 text-white text-pad">Follow us on social:</h6>
             <!--Linkedin -->
             <a class="li-ic">
-                <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/">
-              <i class="fab fa-meetup mr-4 fa-2x" style="color:rgb(255, 255, 255);"> </i>
-            </a>
-            <!--Instagram-->
-            <a class="ins-ic">
-              <a href="https://www.instagram.com/brooklynwetswp/">
-              <i class="fab fa-instagram white-text fa-2x" style="color:rgb(255, 255, 255);"> </i>
-            </a>
+              <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/">
+                <i class="fab fa-meetup mr-4 fa-2x" style="color:rgb(255, 255, 255);"> </i>
+              </a>
+              <!--Instagram-->
+              <a class="ins-ic">
+                <a href="https://www.instagram.com/brooklynwetswp/">
+                  <i class="fab fa-instagram white-text fa-2x" style="color:rgb(255, 255, 255);"> </i>
+                </a>
 
           </div>
           <!-- Grid column -->
@@ -153,14 +191,15 @@
 
     <!-- Footer Links -->
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© Brooklyn Wets. All rights reserved 2019. Design and code by
+    <div class="footer-copyright text-center py-3">© Brooklyn Wets. All rights reserved 2019. Design and code with love
+      by
       <a href="https://www.bogotadev.com/">BogotaDev</a>
     </div>
     <!-- Copyright -->
   </footer>
   <!-- Footer end -->
 
-  
+
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -176,10 +215,10 @@
   <script src="js/ekko-lightbox.min.js"></script>
   <script src="js/ekko-lightbox.min.js.map"></script>
   <script src="/js/customjs.js"></script>
-  <script>$(document).on('click', '[data-toggle="lightbox"]', function(event) {
-    event.preventDefault();
-    $(this).ekkoLightbox();
-});</script>
+  <script>$(document).on('click', '[data-toggle="lightbox"]', function (event) {
+      event.preventDefault();
+      $(this).ekkoLightbox();
+    });</script>
 </body>
 
 </html>
