--- a/public/index.html
+++ b/public/index.html
@@ -1,63 +1,67 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <title>Brooklyn Wets</title> 
-  </head>
-  <body>
-    <!-- Nav-->
-    <nav class="navbar fixed-top navbar navbar-expand-lg navbar-light bg-light sb-navbar">
-      <div class="container">
-          <a class="navbar-brand" href="#">
-              <img src="images/logo_final.svg" width="50" height="50" class="d-inline-block align-middle" alt="">
-              <span class="ml-1 font-weight-bolder align-middle">Brooklyn Wets</span>
-          </a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        
-          <div class="collapse navbar-collapse " id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="About.html">About<span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Events</a>
-              </li>
-              <li class="nav-item ">
-                  <a class="nav-link" href="#">Women<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Locations</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav pb-3 pb-lg-0">
-                    <li class="nav-item d-none d-lg-inline-block">
-                    <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/" class="nav-link text-meetup">
-                      <i class="fab fa-meetup fa-lg"></i>
-                    </a>
-                    </li>
-                    <li class="nav-item d-none d-lg-inline-block">
-                    <a href="https://www.instagram.com/brooklynwetswp/" class="nav-link text-github">
-                    <i class="fab fa-instagram fa-lg"></i>
-                    </a>
-                    </li>
-              </ul>
-              <a class="navbar-brand ml-2" href="#">
-                <img src="images/ball_final.svg" width="50" height="50" class="d-inline-block align-middle" alt="">
-              </a>
-          </div>
-      </div>  
-    </nav>
-    <!-- Nav-->
-<!--Carousel Wrapper-->
-<header>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <title>Brooklyn Wets</title>
+</head>
+
+<body>
+  <!-- Nav-->
+  <nav class="navbar fixed-top navbar navbar-expand-lg navbar-light bg-light sb-navbar">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <img src="images/logo_final.svg" width="50" height="50" class="d-inline-block align-middle" alt="">
+        <span class="ml-1 font-weight-bolder align-middle">Brooklyn Wets</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse " id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="About.html">About<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Events</a>
+          </li>
+          <li class="nav-item ">
+            <a class="nav-link" href="#">Women<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Locations</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav pb-3 pb-lg-0">
+          <li class="nav-item d-none d-lg-inline-block">
+            <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/" class="nav-link text-meetup">
+              <i class="fab fa-meetup fa-lg"></i>
+            </a>
+          </li>
+          <li class="nav-item d-none d-lg-inline-block">
+            <a href="https://www.instagram.com/brooklynwetswp/" class="nav-link text-github">
+              <i class="fab fa-instagram fa-lg"></i>
+            </a>
+          </li>
+        </ul>
+        <a class="navbar-brand ml-2" href="#">
+          <img src="images/ball_final.svg" width="50" height="50" class="d-inline-block align-middle" alt="">
+        </a>
+      </div>
+    </div>
+  </nav>
+  <!-- Nav-->
+  <!--Carousel Wrapper-->
+  <header>
     <div class="overlay"></div>
     <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
       <source src="images/video_home.mp4" type="video/mp4">
@@ -135,43 +139,35 @@
       <p class="lead text-muted text-pad">We invite you to meet our water polo group and discover how we have fun.</p>
     </div>
     <div class="container">
-        <div class="row">
-          <a href="images/1.png" data-toggle="lightbox" data-gallery="gallery"
-            class="col-md-3 view overlay">
-            <img src="images/1.png" class="img-fluid rounded">
-          </a>
-          <a href="images/2.png" data-toggle="lightbox" data-gallery="gallery"
-            class="col-md-3">
-            <img src="images/2.png" class="img-fluid rounded">
-          </a>
-          <a href="images/3.png" data-toggle="lightbox" data-gallery="gallery"
-            class="col-md-3">
-            <img src="images/3.png" class="img-fluid rounded">
-          </a>
-          <a href="images/4.png" data-toggle="lightbox" data-gallery="gallery"
-            class="col-md-3">
-            <img src="images/4.png" class="img-fluid rounded">
-          </a>
-        </div>
-        <div class="row">
-          <a href="images/5.png" data-toggle="lightbox" data-gallery="gallery"
-            class="col-md-3">
-            <img src="images/5.png" class="img-fluid rounded">
-          </a>
-          <a href="images/6.png" data-toggle="lightbox" data-gallery="gallery"
-            class="col-md-3">
-            <img src="images/6.png" class="img-fluid rounded">
-          </a>
-          <a href="images/7.png" data-toggle="lightbox" data-gallery="gallery"
-            class="col-md-3">
-            <img src="images/7.png" class="img-fluid rounded">
-          </a>
-          <a href="images/8.png" data-toggle="lightbox" data-gallery="gallery"
-            class="col-md-3">
-            <img src="images/8.png" class="img-fluid rounded">
-          </a>
-        </div>
+      <div class="row">
+        <a href="images/1.png" data-toggle="lightbox" data-gallery="gallery" class="col-md-3 view overlay">
+          <img src="images/1.png" class="img-fluid rounded">
+        </a>
+        <a href="images/2.png" data-toggle="lightbox" data-gallery="gallery" class="col-md-3">
+          <img src="images/2.png" class="img-fluid rounded">
+        </a>
+        <a href="images/3.png" data-toggle="lightbox" data-gallery="gallery" class="col-md-3">
+          <img src="images/3.png" class="img-fluid rounded">
+        </a>
+        <a href="images/4.png" data-toggle="lightbox" data-gallery="gallery" class="col-md-3">
+          <img src="images/4.png" class="img-fluid rounded">
+        </a>
       </div>
+      <div class="row">
+        <a href="images/5.png" data-toggle="lightbox" data-gallery="gallery" class="col-md-3">
+          <img src="images/5.png" class="img-fluid rounded">
+        </a>
+        <a href="images/6.png" data-toggle="lightbox" data-gallery="gallery" class="col-md-3">
+          <img src="images/6.png" class="img-fluid rounded">
+        </a>
+        <a href="images/7.png" data-toggle="lightbox" data-gallery="gallery" class="col-md-3">
+          <img src="images/7.png" class="img-fluid rounded">
+        </a>
+        <a href="images/8.png" data-toggle="lightbox" data-gallery="gallery" class="col-md-3">
+          <img src="images/8.png" class="img-fluid rounded">
+        </a>
+      </div>
+    </div>
   </section>
 
   <!--mani2-->
@@ -184,14 +180,14 @@
       <div class="container">
 
         <!-- Grid row-->
-        <div class="row py-4 d-flex align-items-center">
+        <div class="row py-4 d-flex align-items-center" style="margin-top: 0px;">
 
           <!-- Grid column -->
           <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0 text-white">
             <p>
-                <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-              <p>
-                <i class="fas fa-envelope mr-3"></i>info@brooklynwets.com</p>
+              <i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
+            <p>
+              <i class="fas fa-envelope mr-3"></i>info@brooklynwets.com</p>
           </div>
           <!-- Grid column -->
 
@@ -200,14 +196,14 @@
             <h6 class="mb-0 text-white text-pad">Follow us on social:</h6>
             <!--Linkedin -->
             <a class="li-ic">
-                <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/">
-              <i class="fab fa-meetup mr-4 fa-2x" style="color:rgb(255, 255, 255);"> </i>
-            </a>
-            <!--Instagram-->
-            <a class="ins-ic">
-              <a href="https://www.instagram.com/brooklynwetswp/">
-              <i class="fab fa-instagram white-text fa-2x" style="color:rgb(255, 255, 255);"> </i>
-            </a>
+              <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/">
+                <i class="fab fa-meetup mr-4 fa-2x" style="color:rgb(255, 255, 255);"> </i>
+              </a>
+              <!--Instagram-->
+              <a class="ins-ic">
+                <a href="https://www.instagram.com/brooklynwetswp/">
+                  <i class="fab fa-instagram white-text fa-2x" style="color:rgb(255, 255, 255);"> </i>
+                </a>
 
           </div>
           <!-- Grid column -->
@@ -220,13 +216,14 @@
 
     <!-- Footer Links -->
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© Brooklyn Wets. All rights reserved 2019. Design and code by
+    <div class="footer-copyright text-center py-3">© Brooklyn Wets. All rights reserved 2019. Design and code with love
+      by
       <a href="https://www.bogotadev.com/">BogotaDev</a>
     </div>
     <!-- Copyright -->
   </footer>
   <!-- Footer end -->
-  
+
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -242,10 +239,10 @@
   <script src="js/ekko-lightbox.min.js"></script>
   <script src="js/ekko-lightbox.min.js.map"></script>
   <script src="/js/customjs.js"></script>
-  <script>$(document).on('click', '[data-toggle="lightbox"]', function(event) {
-    event.preventDefault();
-    $(this).ekkoLightbox();
-});</script>
+  <script>$(document).on('click', '[data-toggle="lightbox"]', function (event) {
+      event.preventDefault();
+      $(this).ekkoLightbox();
+    });</script>
 </body>
 
 </html>
