--- a/public/events.html
+++ b/public/events.html
@@ -10,6 +10,70 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/fullcalendar.css">
+  <link rel="stylesheet" href="css/fullcalendar.print.css">
+    <script src="js/jquery-1.10.2.js"></script>
+      <script src="js/jquery-ui.custom.min.js"></script>
+  <script src="js/fullcalendar.js"></script>
+  <script src="js/customjs.js"></script>
+  <style>
+  
+    body {
+      margin-top: 40px;
+      text-align: center;
+      font-size: 14px;
+      font-family: "Helvetica Nueue",Arial,Verdana,sans-serif;
+      background-color: #DDDDDD;
+      }
+  
+    #wrap {
+      width: 1100px;
+      margin: 0 auto;
+      }
+  
+    #external-events {
+      float: left;
+      width: 150px;
+      padding: 0 10px;
+      text-align: left;
+      }
+  
+    #external-events h4 {
+      font-size: 16px;
+      margin-top: 0;
+      padding-top: 1em;
+      }
+  
+    .external-event { /* try to mimick the look of a real event */
+      margin: 10px 0;
+      padding: 2px 4px;
+      background: #3366CC;
+      color: #fff;
+      font-size: .85em;
+      cursor: pointer;
+      }
+  
+    #external-events p {
+      margin: 1.5em 0;
+      font-size: 11px;
+      color: #666;
+      }
+  
+    #external-events p input {
+      margin: 0;
+      vertical-align: middle;
+      }
+  
+    #calendar {
+  /* 		float: right; */
+          margin: 0 auto;
+      width: 900px;
+      background-color: #FFFFFF;
+        border-radius: 6px;
+          box-shadow: 0 1px 2px #C3C3C3;
+      }
+  
+  </style>
   <title>Brooklyn Wets</title>
 </head>
 
@@ -62,7 +126,13 @@
   <!-- Nav-->
 
   <!-- Content-->
+  <div id='wrap'>
 
+    <div id='calendar'></div>
+    
+    <div style='clear:both'></div>
+    </div>
+    
   <!-- Content-->
 
 
@@ -122,9 +192,6 @@
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
     crossorigin="anonymous"></script>
@@ -132,8 +199,7 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
   <script src="js/ekko-lightbox.min.js"></script>
-  <script src="js/ekko-lightbox.min.js.map"></script>
-  <script src="/js/customjs.js"></script>
+ 
   <script>$(document).on('click', '[data-toggle="lightbox"]', function (event) {
       event.preventDefault();
       $(this).ekkoLightbox();
