--- a/public/events.html
+++ b/public/events.html
@@ -62,7 +62,19 @@
   <!-- Nav-->
 
   <!-- Content-->
-
+  <div class="container">
+      <section class="text-center jumbotron-events">
+          <div class="container">
+            <h2 class="display-3 font-weight-bold text-pad">¡Practice Water Polo with us!</h2>
+            <p class="lead text-muted text-pad">There's always something going on in Brooklyn West! Plan your practice.</p>
+          </div>
+      </section>
+  <div class="Eventcont">
+  <div class="responsive-iframe-container big-container">
+      <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FBogota&amp;src=YWlqcTZoa3BxbTNtZHJ1cm83M2ptbXQ5ZDhAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23616161&amp;mode=AGENDA&amp;showPrint=0" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    </div>
+    </div>
+  </div>
   <!-- Content-->
 
 
