--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
             <a class="nav-link" href="events.html">Events</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="#">Women<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="women.html">Women<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Locations</a>
@@ -95,7 +95,7 @@
                 <div class="card border-0 border-bottom-red shadow-lg shadow-hover">
                   <div class="card-body text-center">
                     <div class="text-center">
-                      <img src="images/icon1.svg" class="d-inline-block align-middle" alt="">
+                      <img src="images/icon3.svg" class="d-inline-block align-middle" alt="">
                     </div>
                     Donations
                   </div>
@@ -114,12 +114,22 @@
             </div>
             <div class="d-flex">
               <a href="" class="w-50 pr-3 pb-4">
+                <div class="card border-0 border-bottom-red shadow-lg shadow-hover">
+                  <div class="card-body text-center">
+                    <div class="text-center">
+                      <img src="images/icon1.svg" class="d-inline-block align-middle" alt="">
+                    </div>
+                    Locations
+                  </div>
+                </div>
+              </a>
+              <a href="About.html#Who_can_practice" class="w-50 pr-3 pb-4">
                 <div class="card border-0 border-bottom-blue shadow-lg shadow-hover">
                   <div class="card-body text-center">
                     <div class="text-center">
-                      <img src="images/icon3.svg" height="100px" width="100px" class="d-inline-block align-middle" alt="">
+                      <img src="images/icon2.svg" class="d-inline-block align-middle" alt="">
                     </div>
-                    Team does!
+                    Who can participate?
                   </div>
                 </div>
               </a>
