--- a/public/events.html
+++ b/public/events.html
@@ -39,10 +39,10 @@
             <a class="nav-link" href="About.html">About<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Events</a>
+            <a class="nav-link" href="events.html">Events</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link" href="#">Women<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="women.html">Women<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Locations</a>
