--- a/public/events.html
+++ b/public/events.html
@@ -12,11 +12,11 @@
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/fullcalendar.css">
   <link rel="stylesheet" href="css/fullcalendar.print.css">
-    <script src="js/jquery-1.10.2.js"></script>
-      <script src="js/jquery-ui.custom.min.js"></script>
+  <script src="js/jquery-1.10.2.js"></script>
+  <script src="js/jquery-ui.custom.min.js"></script>
   <script src="js/fullcalendar.js"></script>
   <script src="js/customjs.js"></script>
- 
+
   <title>Brooklyn Wets</title>
 </head>
 
@@ -70,16 +70,18 @@
 
   <!-- Content-->
   <div class="container">
-      <section class="text-center jumbotron-events">
-          <div class="container">
-            <h2 class="display-3 font-weight-bold text-pad">¡Practice Water Polo with us!</h2>
-            <p class="lead text-muted text-pad">There's always something going on in Brooklyn West! Plan your practice.</p>
-          </div>
-      </section>
-  <div class="Eventcont">
-  <div class="responsive-iframe-container big-container">
-      <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FBogota&amp;src=YWlqcTZoa3BxbTNtZHJ1cm83M2ptbXQ5ZDhAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23616161&amp;mode=AGENDA&amp;showPrint=0" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-    </div>
+    <section class="text-center jumbotron-events">
+      <div class="container">
+        <h2 class="display-3 font-weight-bold text-pad">¡Practice Water Polo with us!</h2>
+        <p class="lead text-muted text-pad">There's always something going on in Brooklyn West! Plan your practice.</p>
+      </div>
+    </section>
+    <div class="Eventcont">
+      <div class="responsive-iframe-container big-container">
+        <iframe
+          src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FBogota&amp;src=YWlqcTZoa3BxbTNtZHJ1cm83M2ptbXQ5ZDhAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23616161&amp;mode=AGENDA&amp;showPrint=0"
+          style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+      </div>
     </div>
   </div>
   <!-- Content-->
@@ -107,16 +109,22 @@
           <!-- Grid column -->
           <div class="col-md-6 col-lg-7 text-center text-md-right">
             <h6 class="mb-0 text-white text-pad">Follow us on social:</h6>
-            <!--Linkedin -->
-            <a class="li-ic">
-              <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/">
-                <i class="fab fa-meetup mr-4 fa-2x" style="color:rgb(255, 255, 255);"> </i>
+            <!--Facebook-->
+            <a class="ins-ic">
+              <a href="https://www.facebook.com/brooklynwetswp">
+                <i class="fab fa-facebook white-text mr-4 fa-2x" style="color:rgb(255, 255, 255);"> </i>
               </a>
-              <!--Instagram-->
-              <a class="ins-ic">
-                <a href="https://www.instagram.com/brooklynwetswp/">
-                  <i class="fab fa-instagram white-text fa-2x" style="color:rgb(255, 255, 255);"> </i>
+              <!--Linkedin -->
+              <a class="li-ic">
+                <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/">
+                  <i class="fab fa-meetup mr-4 fa-2x" style="color:rgb(255, 255, 255);"> </i>
                 </a>
+                <!--Instagram-->
+                <a class="ins-ic">
+                  <a href="https://www.instagram.com/brooklynwetswp/">
+                    <i class="fab fa-instagram white-text fa-2x" style="color:rgb(255, 255, 255);"> </i>
+                  </a>
+
 
           </div>
           <!-- Grid column -->
@@ -148,7 +156,7 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
   <script src="js/ekko-lightbox.min.js"></script>
- 
+
   <script>$(document).on('click', '[data-toggle="lightbox"]', function (event) {
       event.preventDefault();
       $(this).ekkoLightbox();
