--- a/public/index.html
+++ b/public/index.html
@@ -204,6 +204,11 @@
           <!-- Grid column -->
           <div class="col-md-6 col-lg-7 text-center text-md-right">
             <h6 class="mb-0 text-white text-pad">Follow us on social:</h6>
+            <!--Facebook-->
+            <a class="ins-ic">
+              <a href="https://www.facebook.com/brooklynwetswp">
+                <i class="fab fa-facebook white-text mr-4 fa-2x" style="color:rgb(255, 255, 255);"> </i>
+              </a>
             <!--Linkedin -->
             <a class="li-ic">
               <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/">
@@ -214,7 +219,6 @@
                 <a href="https://www.instagram.com/brooklynwetswp/">
                   <i class="fab fa-instagram white-text fa-2x" style="color:rgb(255, 255, 255);"> </i>
                 </a>
-
           </div>
           <!-- Grid column -->
 
