--- a/public/women.html
+++ b/public/women.html
@@ -60,34 +60,31 @@
         </div>
     </nav>
     <!-- Nav-->
-    <header class="py-5 bg-image-full" style="background-image: url('https://images.pexels.com/photos/260445/pexels-photo-260445.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');">
+    <header class="py-5 bg-image-full" style="background-image: url('https://images.pexels.com/photos/260445/pexels-photo-260445.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260'); height: 500px;">
         <img class="img-fluid d-block mx-auto" src="/public/images/" alt="">
     </header>
 
     <!-- Content section -->
     <section class="py-5">
         <div class="container">
-            <h1>Section Heading</h1>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat
-                architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.
-            </p>
+            <h1 class="min display-3 font-weight-bold text-center">Urban Dolphins!</h1>
+            <p class="lead text-center">Our women's team is a combination of experienced and new players,
+                nicknamed the Urban Dolphins.</p>
         </div>
     </section>
-    <!--==========================
+<!--==========================
     Intro Section
   ============================-->
     <section id="intro" class="clearfix">
-        <div class="container">
+        <div class="container align-self-center">
 
             <div class="intro-img">
-                <img src="images/water-polo2.svg" alt="" class="img-fluid">
+                <img src="images/BW_Woman.svg" alt="" class="img-fluid">
             </div>
 
             <div class="intro-info">
-                <h1 class="min display-3 font-weight-bold" style="color: white;">Urban Dolphins!</h1>
-                <h4 class="text-justify text-light">Our women's team is a combination of experienced and new players,
-                    nicknamed the Urban Dolphins. Our ladies like to play against the boys and against other women,
+                <h1 class="min display-3 font-weight-bold" style="color: white;">Our women's team is growing!</h1>
+                <h4 class="text-justify text-light">Our ladies like to play against the boys and against other women,
                     scrimmaging with NYAC and Columbia.
                     They also like to hand out outside of the pool (NO BOYS ALLOWED!).</h4>
 
@@ -97,7 +94,7 @@
     </section><!-- #intro -->
 
     <!-- Image Section - set the background image for the header in the line below -->
-    <section class="py-5 bg-image-full" style="background-image: url('https://unsplash.it/1900/1080?image=1081');">
+    <section class="py-5 bg-image-full" style="background-image: url('https://images.pexels.com/photos/261185/pexels-photo-261185.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260');">
         <!-- Put anything you want here! There is just a spacer below for demo purposes! -->
         <div style="height: 200px;"></div>
     </section>
@@ -124,17 +121,21 @@
                     <!-- Grid column -->
                     <div class="col-md-6 col-lg-7 text-center text-md-right">
                         <h6 class="mb-0 text-white text-pad">Follow us on social:</h6>
-                        <!--Linkedin -->
-                        <a class="li-ic">
-                            <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/">
-                                <i class="fab fa-meetup mr-4 fa-2x" style="color:rgb(255, 255, 255);"> </i>
-                            </a>
-                            <!--Instagram-->
-                            <a class="ins-ic">
-                                <a href="https://www.instagram.com/brooklynwetswp/">
-                                    <i class="fab fa-instagram white-text fa-2x" style="color:rgb(255, 255, 255);"> </i>
-                                </a>
-
+                        <!--Facebook-->
+            <a class="ins-ic">
+                <a href="https://www.facebook.com/brooklynwetswp">
+                  <i class="fab fa-facebook white-text mr-4 fa-2x" style="color:rgb(255, 255, 255);"> </i>
+                </a>
+              <!--Linkedin -->
+              <a class="li-ic">
+                <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/">
+                  <i class="fab fa-meetup mr-4 fa-2x" style="color:rgb(255, 255, 255);"> </i>
+                </a>
+                <!--Instagram-->
+                <a class="ins-ic">
+                  <a href="https://www.instagram.com/brooklynwetswp/">
+                    <i class="fab fa-instagram white-text fa-2x" style="color:rgb(255, 255, 255);"> </i>
+                  </a>
                     </div>
                     <!-- Grid column -->
 
