--- a/public/About.html
+++ b/public/About.html
@@ -184,7 +184,7 @@
 
       </section>
     </div>
-    <div class="mailchimp">
+    <div class="calltoaction">
       <div class="container text-center">
         <div class="row justify-content-center">
           <div class="col-xl-7 col-lg-8">
@@ -225,6 +225,11 @@
           <!-- Grid column -->
           <div class="col-md-6 col-lg-7 text-center text-md-right">
             <h6 class="mb-0 text-white text-pad">Follow us on social:</h6>
+            <!--Facebook-->
+            <a class="ins-ic">
+              <a href="https://www.facebook.com/brooklynwetswp">
+                <i class="fab fa-facebook white-text mr-4 fa-2x" style="color:rgb(255, 255, 255);"> </i>
+              </a>
             <!--Linkedin -->
             <a class="li-ic">
               <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/">
