--- a/public/women.html
+++ b/public/women.html
@@ -50,7 +50,7 @@
                         </a>
                     </li>
                 </ul>
-                <a class="navbar-brand ml-2" href="#">
+                <a class="navbar-brand ml-2" href="whiteboard.html">
                     <img src="images/ball_final.svg" width="50" height="50" class="d-inline-block align-middle" alt="">
                 </a>
             </div>
