--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css" />
   <link rel="stylesheet" href="css/bootstrap.css">
   <title>Brooklyn Wets</title>
 </head>
@@ -50,7 +51,7 @@
             </a>
           </li>
         </ul>
-        <a class="navbar-brand ml-2" href="#">
+        <a class="navbar-brand ml-2" href="whiteboard.html">
           <img src="images/ball_final.svg" width="50" height="50" class="d-inline-block align-middle" alt="">
         </a>
       </div>
@@ -143,39 +144,45 @@
   <section class="text-center jumbotron-home">
     <div class="container">
       <h2 class="display-3 font-weight-bold text-pad">¡Enjoy with us!</h2>
-      <p class="lead text-muted text-pad">We invite you to meet our water polo group and discover how we have fun.</p>
-    </div>
-    <div class="container">
-      <div class="row">
-        <a href="images/1.png" data-toggle="lightbox" data-gallery="gallery" class="col-md-3 view overlay">
-          <img src="images/1.png" class="img-fluid rounded">
-        </a>
-        <a href="images/2.png" data-toggle="lightbox" data-gallery="gallery" class="col-md-3">
-          <img src="images/2.png" class="img-fluid rounded">
-        </a>
-        <a href="images/3.png" data-toggle="lightbox" data-gallery="gallery" class="col-md-3">
-          <img src="images/3.png" class="img-fluid rounded">
-        </a>
-        <a href="images/4.png" data-toggle="lightbox" data-gallery="gallery" class="col-md-3">
-          <img src="images/4.png" class="img-fluid rounded">
-        </a>
-      </div>
-      <div class="row">
-        <a href="images/5.png" data-toggle="lightbox" data-gallery="gallery" class="col-md-3">
-          <img src="images/5.png" class="img-fluid rounded">
-        </a>
-        <a href="images/6.png" data-toggle="lightbox" data-gallery="gallery" class="col-md-3">
-          <img src="images/6.png" class="img-fluid rounded">
-        </a>
-        <a href="images/7.png" data-toggle="lightbox" data-gallery="gallery" class="col-md-3">
-          <img src="images/7.png" class="img-fluid rounded">
-        </a>
-        <a href="images/8.png" data-toggle="lightbox" data-gallery="gallery" class="col-md-3">
-          <img src="images/8.png" class="img-fluid rounded">
-        </a>
-      </div>
+      <p class="lead text-muted">We invite you to meet our water polo group and discover how we have fun.</p>
     </div>
   </section>
+  <section class="gallery-block grid-gallery">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-lg-4 item">
+                <a class="lightbox" href="images/1.png">
+                    <img class="img-fluid image scale-on-hover" src="images/1.png">
+                </a>
+            </div>
+            <div class="col-md-6 col-lg-4 item">
+                <a class="lightbox" href="images/2.png">
+                    <img class="img-fluid image scale-on-hover" src="images/2.png">
+                </a>
+            </div>
+            <div class="col-md-6 col-lg-4 item">
+                <a class="lightbox" href="images/3.png">
+                    <img class="img-fluid image scale-on-hover" src="images/3.png">
+                </a>
+            </div>
+            <div class="col-md-6 col-lg-4 item">
+                <a class="lightbox" href="images/4.png">
+                    <img class="img-fluid image scale-on-hover" src="images/4.png">
+                </a>
+            </div>
+            <div class="col-md-6 col-lg-4 item">
+                <a class="lightbox" href="images/5.png">
+                    <img class="img-fluid image scale-on-hover" src="images/5.png">
+                </a>
+            </div>
+            <div class="col-md-6 col-lg-4 item">
+                <a class="lightbox" href="images/6.png">
+                    <img class="img-fluid image scale-on-hover" src="images/6.png">
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
 
   <!--mani2-->
 
@@ -247,13 +254,11 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-  <script src="js/ekko-lightbox.min.js"></script>
-  <script src="js/ekko-lightbox.min.js.map"></script>
-  <script src="/js/customjs.js"></script>
-  <script>$(document).on('click', '[data-toggle="lightbox"]', function (event) {
-      event.preventDefault();
-      $(this).ekkoLightbox();
-    });</script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
+ <script>
+     baguetteBox.run('.grid-gallery', { animation: 'slideIn'});
+ </script>
 </body>
 
 </html>
