--- a/public/About.html
+++ b/public/About.html
@@ -40,12 +40,12 @@
         </ul>
         <ul class="navbar-nav pb-3 pb-lg-0">
           <li class="nav-item d-none d-lg-inline-block">
-            <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/" class="nav-link text-meetup">
+            <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/" class="nav-link text-meetup" target="_blank">
               <i class="fab fa-meetup fa-lg"></i>
             </a>
           </li>
           <li class="nav-item d-none d-lg-inline-block">
-            <a href="https://www.instagram.com/brooklynwetswp/" class="nav-link text-github">
+            <a href="https://www.instagram.com/brooklynwetswp/" class="nav-link text-github" target="_blank">
               <i class="fab fa-instagram fa-lg"></i>
             </a>
           </li>
@@ -185,12 +185,10 @@
       <div class="container text-center">
         <div class="row justify-content-center">
           <div class="col-xl-7 col-lg-8">
-            <h2 class="mb-0 uppercase font-weight-bold">Practice Times</h2>
-            <p class="text-white-50 mb-4">We practice Saturdays 2-3:30PM at Metropolitan Rec Center in Williamsburg. We
-              also have a more instructional beginner friendly practice at Mondays at 6pm at the Gertrude Ederle
-              Recreation Center. Subscribe for more information.</p>
+            <h2 class="mb-0 uppercase font-weight-bold" style="color: white;">Practice Times</h2>
+            <p class="text-white-50 mb-4">We practice Saturdays 2-3:30PM at the Metropolitan Rec Center in Williamsburg. We also have a more instructional beginner friendly practice on Mondays and Wednesdays at 6pm at the Gertrude Ederle Recreation Center. All of our practice times and locations are detailed on our Meetup page "New York Water Polo Meetup". Just click the meetup link!</p>
             <div id="mc_embed_signup">
-              <a href="events.html" class="btn btn-dark btn-lg active" role="button" aria-pressed="true">LOCATIONS!</a>
+              <a href="https://www.meetup.com/es-ES/New-York-Water-Polo-Meetup/" class="btn btn-light btn-lg active" role="button" aria-pressed="true">Meetup!</a>
             </div>
           </div>
         </div>
@@ -224,17 +222,17 @@
             <h6 class="mb-0 text-white text-pad">Follow us on social:</h6>
             <!--Facebook-->
             <a class="ins-ic">
-              <a href="https://www.facebook.com/brooklynwetswp">
+              <a href="https://www.facebook.com/brooklynwetswp" target="_blank">
                 <i class="fab fa-facebook white-text mr-4 fa-2x" style="color:rgb(255, 255, 255);"> </i>
               </a>
             <!--Linkedin -->
             <a class="li-ic">
-              <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/">
+              <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/" target="_blank">
                 <i class="fab fa-meetup mr-4 fa-2x" style="color:rgb(255, 255, 255);"> </i>
               </a>
               <!--Instagram-->
               <a class="ins-ic">
-                <a href="https://www.instagram.com/brooklynwetswp/">
+                <a href="https://www.instagram.com/brooklynwetswp/" target="_blank">
                   <i class="fab fa-instagram white-text fa-2x" style="color:rgb(255, 255, 255);"> </i>
                 </a>
 
