--- a/public/locations.html
+++ b/public/locations.html
@@ -47,12 +47,12 @@
         </ul>
         <ul class="navbar-nav pb-3 pb-lg-0">
           <li class="nav-item d-none d-lg-inline-block">
-            <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/" class="nav-link text-meetup">
+            <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/" class="nav-link text-meetup" target="_blank">
               <i class="fab fa-meetup fa-lg"></i>
             </a>
           </li>
           <li class="nav-item d-none d-lg-inline-block">
-            <a href="https://www.instagram.com/brooklynwetswp/" class="nav-link text-github">
+            <a href="https://www.instagram.com/brooklynwetswp/" class="nav-link text-github" target="_blank">
               <i class="fab fa-instagram fa-lg"></i>
             </a>
           </li>
@@ -69,8 +69,8 @@
   <div class="container">
     <section class="text-center jumbotron-events">
       <div class="container">
-        <h1 class="display-3 font-weight-bold text-pad">¡Practice Water Polo with us!</h1>
-        <p class="lead text-muted text-pad">There's always something going on in Brooklyn West! Plan your practice.</p>
+        <h1 class="display-3 font-weight-bold text-pad">Practice Water Polo with us!</h1>
+        <p class="lead text-muted text-pad">There's always something going on with Brooklyn West!</p>
       </div>
       <div class="img-responsive">
         <img src="images/slideLocationsWB.png" class="img-fluid" alt="Sample photo">
@@ -79,18 +79,25 @@
     <!-- Content section -->
     <section class="py-5">
       <div class="container">
-        <h2 class="min display-3 font-weight-bold text-center">Bedford Avenue and Metropolitan Avenue</h2>
+        <h2 class="min display-3 font-weight-bold text-center">Metropolitan Recreation Center</h2>
         <p class="lead text-center">261 Bedford Avenue
           Brooklyn, NY 11211
           Cross Streets:
           <strong>Bedford Avenue and Metropolitan Avenue</strong></p>
+          <p class="lead text-center"><strong>Practice Time:</strong><br>
+            Every Saturday we practice at the Metropolitan Recreation Center 2:00pm to 3:30pm
+            </p>
         <!--Google map-->
         <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 300px">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3024.1329687548387!2d-73.96262224840939!3d40.71508924526095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3a85b95850bbd7a2!2sMetropolitan+Recreation+Center!5e0!3m2!1ses-419!2sco!4v1560801748925!5m2!1ses-419!2sco" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
+    
         <!--Google Maps-->
         <h2 class="min display-3 font-weight-bold text-center">Gertrude Ederle Recreation Center</h2>
         <p class="lead text-center">W. 59 St., W. 60 St.,<strong>bet. Amsterdam Ave. and W. End Ave. Manhattan</strong></p>
+        <p class="lead text-center"><strong>Practice Time:</strong><br>
+          Monday & Wenesday we practice at the Gertrude Rec Center 6:00pm to 7:30pm
+          </p>
         <!--Google map-->
         <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 300px">
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12086.289200791834!2d-73.9886621!3d40.7714308!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x11d0cc87326d1256!2sGertrude+Ederle+Recreation+Center!5e0!3m2!1ses-419!2sco!4v1560804488351!5m2!1ses-419!2sco" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -127,17 +134,17 @@
             <h6 class="mb-0 text-white text-pad">Follow us on social:</h6>
             <!--Facebook-->
             <a class="ins-ic">
-              <a href="https://www.facebook.com/brooklynwetswp">
+              <a href="https://www.facebook.com/brooklynwetswp" target="_blank">
                 <i class="fab fa-facebook white-text mr-4 fa-2x" style="color:rgb(255, 255, 255);"> </i>
               </a>
               <!--Linkedin -->
               <a class="li-ic">
-                <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/">
+                <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/" target="_blank">
                   <i class="fab fa-meetup mr-4 fa-2x" style="color:rgb(255, 255, 255);"> </i>
                 </a>
                 <!--Instagram-->
                 <a class="ins-ic">
-                  <a href="https://www.instagram.com/brooklynwetswp/">
+                  <a href="https://www.instagram.com/brooklynwetswp/" target="_blank">
                     <i class="fab fa-instagram white-text fa-2x" style="color:rgb(255, 255, 255);"> </i>
                   </a>
 
