--- a/public/women.html
+++ b/public/women.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="css/bootstrap.css">
-    <title>Brooklyn Wets</title>
+    <title>Brooklyn Wets!</title>
 </head>
 
 <body>
@@ -40,12 +40,12 @@
                 </ul>
                 <ul class="navbar-nav pb-3 pb-lg-0">
                     <li class="nav-item d-none d-lg-inline-block">
-                        <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/" class="nav-link text-meetup">
+                        <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/" class="nav-link text-meetup" target="_blank">
                             <i class="fab fa-meetup fa-lg"></i>
                         </a>
                     </li>
                     <li class="nav-item d-none d-lg-inline-block">
-                        <a href="https://www.instagram.com/brooklynwetswp/" class="nav-link text-github">
+                        <a href="https://www.instagram.com/brooklynwetswp/" class="nav-link text-github" target="_blank">
                             <i class="fab fa-instagram fa-lg"></i>
                         </a>
                     </li>
@@ -57,10 +57,17 @@
         </div>
     </nav>
     <!-- Nav-->
-    <header class="py-5 bg-image-full" style="background-image: url('https://images.pexels.com/photos/260445/pexels-photo-260445.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260'); height: 500px;">
-        <img class="img-fluid d-block mx-auto" src="/public/images/" alt="">
-    </header>
-
+    
+    <!--carrousel-->
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="images/WB_girls.jpg" alt="First slide">
+          </div>
+        </div>
+      </div>
+    <!--carrousel end-->
+    
     <!-- Content section -->
     <section class="py-5">
         <div class="container">
@@ -81,9 +88,14 @@
 
             <div class="intro-info ">
                 <h1 class="min display-3 font-weight-bold" style="color: white;">Our women's team is growing!</h1>
-                <h4 class="text-justify text-light">Our ladies like to play against the boys and against other women,
-                    scrimmaging with NYAC and Columbia.
-                    They also like to hand out outside of the pool (NO BOYS ALLOWED!).</h4>
+                <h4 class="text-justify text-light">Our women's team (The Urban Dolphins) stays sharp by getting some minutes in with
+                    other female water polo players and team like NYAC and Columbia University.<br> 
+                    <p></p>
+                    This is a masters team and we're here to have a good time and get an awesome workout. We have a strict no bullying policy.
+                    Play hard in the water and play even nicer out of the pool.<br> <p></p> We love buying the new recruits a beer, so join us at Iona
+                     (bar) after Saturday practice! Our team leaders are Shannon Lin, Nicolle Jasbon and Pamela Lueng.<br><p></p>
+                     We encourage you to join our mailing list, so if you're interested in learning more just email us at info@brooklynwets.com!
+                     #thefutureisfemale #womenswaterpolo</h4>
 
             </div>
 
@@ -120,17 +132,17 @@
                         <h6 class="mb-0 text-white text-pad">Follow us on social:</h6>
                         <!--Facebook-->
             <a class="ins-ic">
-                <a href="https://www.facebook.com/brooklynwetswp">
+                <a href="https://www.facebook.com/brooklynwetswp" target="_blank">
                   <i class="fab fa-facebook white-text mr-4 fa-2x" style="color:rgb(255, 255, 255);"> </i>
                 </a>
               <!--Linkedin -->
               <a class="li-ic">
-                <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/">
+                <a href="https://www.meetup.com/New-York-Water-Polo-Meetup/" target="_blank">
                   <i class="fab fa-meetup mr-4 fa-2x" style="color:rgb(255, 255, 255);"> </i>
                 </a>
                 <!--Instagram-->
                 <a class="ins-ic">
-                  <a href="https://www.instagram.com/brooklynwetswp/">
+                  <a href="https://www.instagram.com/brooklynwetswp/" target="_blank">
                     <i class="fab fa-instagram white-text fa-2x" style="color:rgb(255, 255, 255);"> </i>
                   </a>
                     </div>
